--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Haodong Lei's Personal Homepage"
 title_separator          : "-"
 name                     : &name "Haodong Lei"
 description              : &description "personal description"
-url                      : https://Haodong-Lei-Ray.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://haodong-lei-ray.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Haodong-Lei-Ray/Haodong-Lei-Ray.github.io"
+repository               : "Haodong-Lei-Ray/HaodongLei.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
