--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Haodong Lei's Personal Homepage"
 title_separator          : "-"
 name                     : &name "Haodong Lei"
 description              : &description "personal description"
-url                      : https://haodong-lei-ray.github.io/HaodongLei.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://haodong-lei-ray.github.io/HaodongLei.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Haodong-Lei-Ray/HaodongLei.github.io"
 
@@ -22,7 +22,7 @@ repository               : "Haodong-Lei-Ray/HaodongLei.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile1.png"
   name             : "Haodong Lei"
   pronouns         : # example: "she/her"  
   bio              : "Enjoy your life and work."
